Wrap and prevent overflow

--- a/apps/artwork_2/components/metadata/index.styl
+++ b/apps/artwork_2/components/metadata/index.styl
@@ -1,5 +1,6 @@
 .artwork-metadata
   garamond-size('s-body')
+  overflow hidden
 
   &__lot-number
   &__artist
